tests/expectations/compiler/statements/all_loops_fail.out
DCE_ENABLED:
Error [EPAR0370009]: unexpected string: expected 'expression', found '='
    --> compiler-test:15:30
     |
  15 |         for a: u32 in 10u32..=0u32 {
     |                              ^
DCE_DISABLED:
Error [EPAR0370009]: unexpected string: expected 'expression', found '='
    --> compiler-test:15:30
     |
  15 |         for a: u32 in 10u32..=0u32 {
     |                              ^